Updating to support docs make the JDK a build parameter